cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09702_376975352.yaml
Resources:
  KubernetesVPCAF6DB279:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.240.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Resource
  KubernetesVPCKubernetesPrivateSubnetSubnet1SubnetCDC1B72F:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.240.0.0/24
      VpcId:
        Ref: KubernetesVPCAF6DB279
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Kubernetes Private Subnet
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Kubernetes Private SubnetSubnet1
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Kubernetes Private SubnetSubnet1/Subnet
  KubernetesVPCKubernetesPrivateSubnetSubnet1RouteTable6F1D671C:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: KubernetesVPCAF6DB279
      Tags:
        - Key: Name
          Value: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Kubernetes Private SubnetSubnet1
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Kubernetes Private SubnetSubnet1/RouteTable
  KubernetesVPCKubernetesPrivateSubnetSubnet1RouteTableAssociation840EDD2B:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: KubernetesVPCKubernetesPrivateSubnetSubnet1RouteTable6F1D671C
      SubnetId:
        Ref: KubernetesVPCKubernetesPrivateSubnetSubnet1SubnetCDC1B72F
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Kubernetes Private SubnetSubnet1/RouteTableAssociation
  KubernetesVPCKubernetesPrivateSubnetSubnet1DefaultRouteEFA22411:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: KubernetesVPCKubernetesPrivateSubnetSubnet1RouteTable6F1D671C
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: KubernetesVPCKubernetesPublicSubnetSubnet1NATGateway56E5C4A4
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Kubernetes Private SubnetSubnet1/DefaultRoute
  KubernetesVPCKubernetesPublicSubnetSubnet1SubnetD52C2758:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.240.1.0/24
      VpcId:
        Ref: KubernetesVPCAF6DB279
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Kubernetes Public Subnet
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Kubernetes Public SubnetSubnet1
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Kubernetes Public SubnetSubnet1/Subnet
  KubernetesVPCKubernetesPublicSubnetSubnet1RouteTableF99AEC39:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: KubernetesVPCAF6DB279
      Tags:
        - Key: Name
          Value: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Kubernetes Public SubnetSubnet1
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Kubernetes Public SubnetSubnet1/RouteTable
  KubernetesVPCKubernetesPublicSubnetSubnet1RouteTableAssociation1F622A64:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: KubernetesVPCKubernetesPublicSubnetSubnet1RouteTableF99AEC39
      SubnetId:
        Ref: KubernetesVPCKubernetesPublicSubnetSubnet1SubnetD52C2758
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Kubernetes Public SubnetSubnet1/RouteTableAssociation
  KubernetesVPCKubernetesPublicSubnetSubnet1DefaultRoute432BEC5E:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: KubernetesVPCKubernetesPublicSubnetSubnet1RouteTableF99AEC39
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: KubernetesVPCIGWEA0B6418
    DependsOn:
      - KubernetesVPCVPCGW044E0B6B
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Kubernetes Public SubnetSubnet1/DefaultRoute
  KubernetesVPCKubernetesPublicSubnetSubnet1EIP591CD170:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Kubernetes Public SubnetSubnet1
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Kubernetes Public SubnetSubnet1/EIP
  KubernetesVPCKubernetesPublicSubnetSubnet1NATGateway56E5C4A4:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId:
        Ref: KubernetesVPCKubernetesPublicSubnetSubnet1SubnetD52C2758
      AllocationId:
        Fn::GetAtt:
          - KubernetesVPCKubernetesPublicSubnetSubnet1EIP591CD170
          - AllocationId
      Tags:
        - Key: Name
          Value: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Kubernetes Public SubnetSubnet1
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/Kubernetes Public SubnetSubnet1/NATGateway
  KubernetesVPCIGWEA0B6418:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/IGW
  KubernetesVPCVPCGW044E0B6B:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: KubernetesVPCAF6DB279
      InternetGatewayId:
        Ref: KubernetesVPCIGWEA0B6418
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes VPC/Kubernetes VPC/VPCGW
  KubernetesSecurityGroupB00F3520:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: KubernetesFromScratchCdkStack/Kubernetes Security Group/Kubernetes Security Group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 10.240.0.0/16
          Description: All internal traffic
          IpProtocol: "-1"
        - CidrIp: 10.200.0.0/22
          Description: All internal traffic
          IpProtocol: "-1"
        - CidrIp: 0.0.0.0/0
          Description: All SSH external traffic
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          Description: All HTTPS external traffic
          FromPort: 6443
          IpProtocol: tcp
          ToPort: 6443
        - CidrIp: 0.0.0.0/0
          Description: All ICMP external traffic
          FromPort: -1
          IpProtocol: icmp
          ToPort: -1
      VpcId:
        Ref: KubernetesVPCAF6DB279
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes Security Group/Kubernetes Security Group/Resource
  KubernetesElasticIP:
    Type: AWS::EC2::EIP
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes Elastic IP
  KubernetesControlPlaneKubernetesControlPlaneRoleFA377243:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                Fn::Join:
                  - ""
                  - - ec2.
                    - Ref: AWS::URLSuffix
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes Control Plane/Kubernetes Control Plane Role/Resource
  KubernetesControlPlaneKubernetesController0InstanceProfileF9694DB8:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: KubernetesControlPlaneKubernetesControlPlaneRoleFA377243
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes Control Plane/Kubernetes Controller 0/InstanceProfile
  KubernetesControlPlaneKubernetesController0A08BCF81:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 200
      IamInstanceProfile:
        Ref: KubernetesControlPlaneKubernetesController0InstanceProfileF9694DB8
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t2.micro
      KeyName: macbook-air-personal
      SecurityGroupIds:
        - Fn::GetAtt:
            - KubernetesSecurityGroupB00F3520
            - GroupId
      SubnetId:
        Ref: KubernetesVPCKubernetesPublicSubnetSubnet1SubnetD52C2758
      Tags:
        - Key: Name
          Value: kubernetes-controller-0
      UserData:
        Fn::Base64: "#!/bin/bash"
    DependsOn:
      - KubernetesControlPlaneKubernetesControlPlaneRoleFA377243
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes Control Plane/Kubernetes Controller 0/Resource
  KubernetesControlPlaneKubernetesController1InstanceProfile4382227D:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: KubernetesControlPlaneKubernetesControlPlaneRoleFA377243
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes Control Plane/Kubernetes Controller 1/InstanceProfile
  KubernetesControlPlaneKubernetesController1C2F0CC4B:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 200
      IamInstanceProfile:
        Ref: KubernetesControlPlaneKubernetesController1InstanceProfile4382227D
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t2.micro
      KeyName: macbook-air-personal
      SecurityGroupIds:
        - Fn::GetAtt:
            - KubernetesSecurityGroupB00F3520
            - GroupId
      SubnetId:
        Ref: KubernetesVPCKubernetesPublicSubnetSubnet1SubnetD52C2758
      Tags:
        - Key: Name
          Value: kubernetes-controller-1
      UserData:
        Fn::Base64: "#!/bin/bash"
    DependsOn:
      - KubernetesControlPlaneKubernetesControlPlaneRoleFA377243
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes Control Plane/Kubernetes Controller 1/Resource
  KubernetesControlPlaneKubernetesController2InstanceProfile67AD2913:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: KubernetesControlPlaneKubernetesControlPlaneRoleFA377243
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes Control Plane/Kubernetes Controller 2/InstanceProfile
  KubernetesControlPlaneKubernetesController2427F34A5:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 200
      IamInstanceProfile:
        Ref: KubernetesControlPlaneKubernetesController2InstanceProfile67AD2913
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t2.micro
      KeyName: macbook-air-personal
      SecurityGroupIds:
        - Fn::GetAtt:
            - KubernetesSecurityGroupB00F3520
            - GroupId
      SubnetId:
        Ref: KubernetesVPCKubernetesPublicSubnetSubnet1SubnetD52C2758
      Tags:
        - Key: Name
          Value: kubernetes-controller-2
      UserData:
        Fn::Base64: "#!/bin/bash"
    DependsOn:
      - KubernetesControlPlaneKubernetesControlPlaneRoleFA377243
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes Control Plane/Kubernetes Controller 2/Resource
  KubernetesWorkersKubernetesWorkersRole27A4E2CD:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                Fn::Join:
                  - ""
                  - - ec2.
                    - Ref: AWS::URLSuffix
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes Workers/Kubernetes Workers Role/Resource
  KubernetesWorkersKubernetesWorker0InstanceProfile9734CE93:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: KubernetesWorkersKubernetesWorkersRole27A4E2CD
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes Workers/Kubernetes Worker 0/InstanceProfile
  KubernetesWorkersKubernetesWorker00A7786FC:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 200
      IamInstanceProfile:
        Ref: KubernetesWorkersKubernetesWorker0InstanceProfile9734CE93
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t2.micro
      KeyName: macbook-air-personal
      SecurityGroupIds:
        - Fn::GetAtt:
            - KubernetesSecurityGroupB00F3520
            - GroupId
      SubnetId:
        Ref: KubernetesVPCKubernetesPublicSubnetSubnet1SubnetD52C2758
      Tags:
        - Key: Name
          Value: kubernetes-worker-0
      UserData:
        Fn::Base64: |-
          #!/bin/bash
          echo 10.200.0.0/24 > /etc/podCidr.txt
    DependsOn:
      - KubernetesWorkersKubernetesWorkersRole27A4E2CD
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes Workers/Kubernetes Worker 0/Resource
  KubernetesWorkersKubernetesWorker1InstanceProfileD4621398:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: KubernetesWorkersKubernetesWorkersRole27A4E2CD
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes Workers/Kubernetes Worker 1/InstanceProfile
  KubernetesWorkersKubernetesWorker158DC9709:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 200
      IamInstanceProfile:
        Ref: KubernetesWorkersKubernetesWorker1InstanceProfileD4621398
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t2.micro
      KeyName: macbook-air-personal
      SecurityGroupIds:
        - Fn::GetAtt:
            - KubernetesSecurityGroupB00F3520
            - GroupId
      SubnetId:
        Ref: KubernetesVPCKubernetesPublicSubnetSubnet1SubnetD52C2758
      Tags:
        - Key: Name
          Value: kubernetes-worker-1
      UserData:
        Fn::Base64: |-
          #!/bin/bash
          echo 10.200.1.0/24 > /etc/podCidr.txt
    DependsOn:
      - KubernetesWorkersKubernetesWorkersRole27A4E2CD
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes Workers/Kubernetes Worker 1/Resource
  KubernetesWorkersKubernetesWorker2InstanceProfileDA0DED25:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: KubernetesWorkersKubernetesWorkersRole27A4E2CD
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes Workers/Kubernetes Worker 2/InstanceProfile
  KubernetesWorkersKubernetesWorker270221E50:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 200
      IamInstanceProfile:
        Ref: KubernetesWorkersKubernetesWorker2InstanceProfileDA0DED25
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t2.micro
      KeyName: macbook-air-personal
      SecurityGroupIds:
        - Fn::GetAtt:
            - KubernetesSecurityGroupB00F3520
            - GroupId
      SubnetId:
        Ref: KubernetesVPCKubernetesPublicSubnetSubnet1SubnetD52C2758
      Tags:
        - Key: Name
          Value: kubernetes-worker-2
      UserData:
        Fn::Base64: |-
          #!/bin/bash
          echo 10.200.2.0/24 > /etc/podCidr.txt
    DependsOn:
      - KubernetesWorkersKubernetesWorkersRole27A4E2CD
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/Kubernetes Workers/Kubernetes Worker 2/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAAE1VQwW7CMAz9lt1DWDntCKom1AuK2om7mxrN0CYocUAo6r+TrOvKTs9+z7KfXyGL9w9ZvG3h7le6u6yjtg5lbBj0RZTWeHZBs6jR2+A0ivJkFDgYkNHl5lVI4x0xWTOKvC6i3sh4vOqsHVUplKMbMDahNciZXKraBsYvaHtc+IXbeW81QV79NyxUaHvSy4rPSmU4AO/TkTs8cleZ5DMNvFDJyW+34/Tl94CGRYM6OOLH3tlw/bHwj6hSDmCmL+d6FASDjLWdPM84y8rZE/U4jqMwtkN59utbkaLepLTPnmjlgmEaUNYTPgEA6hBbigEAAA==
    Metadata:
      aws:cdk:path: KubernetesFromScratchCdkStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
